Changelog for dataflake.ldapconnection
======================================

0.3 (unreleased)
----------------


0.2 (2008-08-27)
----------------

- backport a fix applied to the LDAPUserFolder FakeLDAP module to handle
  BASE-scoped searches on a DN.


0.1 (2008-06-11)
----------------

Initial release.
